--- a/COMPUTO EVOLUTIVO/Tarea 3. Geneticos/ECUACIONES.Rmd
+++ b/COMPUTO EVOLUTIVO/Tarea 3. Geneticos/ECUACIONES.Rmd
@@ -95,6 +95,37 @@ $$entero = u\times(2^{2*nbits}-1)$$
 - Mutaciónm uniforme
 
 
+\newpage
+
+# Especificaciones para la reporteria #
+
+- pobsize: tamaño de población
+- ngen: número de generaciones
+- PC: porcentaje de cruza
+- PM: porcentaje de mutación
+- El conjunto de parametros debe usarse para ambos problemas a resolver.
+- El número total de evaluaciones por cada AG deberá ser el mismo para ambos problemas. 
+
+- Cada programa debe iniciar pidiendo los parámetros del AG 
+- sólo debe imprimir por cada generación el valor de las 10 variables de la mejor solución y su correspondiente valor de la función objetivo
+
+Ejemplo:
+
+Problema 1 (ó 2)
+Tamaño de población: 100
+Generaciones: 100
+P. cruza: 0.5
+P. mutación: 0.1
+P. torneo (si aplica): 0.9
+Semilla (si aplica): 0.23
+Gen 0
+[0,21, 0,43, 0,54, 0,41, 1,34, 3,12, −0,58, −9,11, 0,12, 8,12] f(x) = 25,23
+Gen 1
+[0,14, 0,75, 0,12, 0,09, 1,12, 4,15, 0,93, −1,98, 0,66, 8,43] f(x) = 23,819
+Gen 100
+[0,00, 0,00, 0,01, 0,01, −0,01, 0,00, 0,00, −0,02, 0,00, 0,00] f(x) = 0,02
+
+
 
 
 
