--- a/VISION POR COMPUTADORA/TAREA 12/REPORTE/Biblio.bib
+++ b/VISION POR COMPUTADORA/TAREA 12/REPORTE/Biblio.bib
@@ -1,73 +1,9 @@
-@misc{coste2012image,
-  author       = {Arthur Coste},
-  title        = {CS6640: Image Processing – Project 3: Affine Transformation, Landmarks Registration, Non-linear Warping},
-  year         = {2012},
-  month        = {October},
-  note         = {Course project for CS6640, University of Utah},
-  howpublished = {\url{https://www.sci.utah.edu/~acoste/uou/Image/project3/ArthurCOSTE_Project3.pdf}}
+@article{wu2017introduction,
+  title={Introduction to convolutional neural networks},
+  author={Wu, Jianxin},
+  journal={National Key Lab for Novel Software Technology. Nanjing University. China},
+  volume={5},
+  number={23},
+  pages={495},
+  year={2017}
 }
-
-
-@book{gonzalez2018digital,
-  title     = {Digital Image Processing},
-  author    = {Gonzalez, Rafael C. and Woods, Richard E.},
-  year      = {2018},
-  publisher = {Pearson},
-}
-
-@book{johnson2007,
-  title     = {Applied Multivariate Statistical Analysis},
-  author    = {Johnson, Richard A. and Wichern, Dean W.},
-  year      = {2007},
-  edition   = {6th},
-  publisher = {Pearson},
-  address   = {Upper Saddle River, NJ},
-  isbn      = {9780131877153}
-}
-
-
-@article{sarkalkan_statistical_2014,
-	title = {Statistical shape and appearance models of bones},
-	volume = {60},
-	issn = {87563282},
-	url = {https://linkinghub.elsevier.com/retrieve/pii/S8756328213004948},
-	doi = {10.1016/j.bone.2013.12.006},
-	language = {en},
-	urldate = {2025-05-27},
-	journal = {Bone},
-	author = {Sarkalkan, Nazli and Weinans, Harrie and Zadpoor, Amir A.},
-	month = mar,
-	year = {2014},
-	pages = {129--140},
-	file = {PDF:C\:\\Users\\Angel\\Zotero\\storage\\VFWQ2HUZ\\Sarkalkan et al. - 2014 - Statistical shape and appearance models of bones.pdf:application/pdf},
-}
-
-@misc{MPHY0026_SSM,
-  title = {{3.2. Statistical Shape Models — MPHY0026 documentation}},
-  author = {{Prof. Tim Cootes and Dr. Yipeng Hu}},
-  howpublished = {\url{https://mphy0026.readthedocs.io/en/latest/segmentation/statistical_shape_models.html}},
-  year = {2019},
-  note = {Accessed: 27 May 2025}
-}
-
-
-@misc{SSM_PCA_Basel,
-  title        = {Principal Component Analysis — Statistical Shape Modelling},
-  author       = {{University of Basel, Department of Mathematics and Computer Science}},
-  howpublished = {\url{https://shapemodelling.cs.unibas.ch/ssm-course/week3/step3-7/}},
-  note         = {Parte del curso en línea \textit{Statistical Shape Modelling}},
-  year         = {2022},
-  urldate      = {2025-05-27}
-}
-
-@misc{cootes_pdms,
-  author       = {Timothy F. Cootes},
-  title        = {Point Distribution Models},
-  howpublished = {\url{https://personalpages.manchester.ac.uk/staff/timothy.f.cootes/Models/pdms.html}},
-  note         = {University of Manchester},
-  year         = {2025},
-  urldate      = {2025-05-27}
-}
-
-
-
